force-app/main/default/objects/Student__c/fields/Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date__c</fullName>
    <description>The date of a student exiting a college</description>
    <label>Exit Date</label>
    <type>Date</type>
</CustomField>