force-app/main/default/objects/Student__c/fields/ParentIsCollege__c.field-meta.xml
<CustomField>
    <fullName>ParentIsCollege__c</fullName>
    <label>ParentIsCollege</label>
    <referenceTo>College__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>