force-app/main/default/objects/Student__c/fields/ParentIsFaculty__c.field-meta.xml
<CustomField>
    <fullName>ParentIsFaculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentIsFaculty</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Location__c</field>
            <operation>equals</operation>
            <valueField>Faculty__c.Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>