force-app/main/default/objects/Student__c/fields/Reason_for_leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_leaving__c</fullName>
    <description>Reason to leave is mandatory if an exit date is entered</description>
    <label>Reason for leaving college</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>