force-app/main/default/objects/Student__c/validationRules/Mandatory_Reason_to_leave.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Reason_to_leave</fullName>
    <active>true</active>
    <description>If an exit date is entered then Reason for leaving college field is mandatory</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Exit_Date__c )),
  ISBLANK( Reason_for_leaving__c )
)</errorConditionFormula>
    <errorDisplayField>Reason_for_leaving__c</errorDisplayField>
    <errorMessage>If an exit date is entered then Reason for leaving college field cannot be blank</errorMessage>
</ValidationRule>